--- a/MiniMesProject.Presentation/src/assets/main.css
+++ b/MiniMesProject.Presentation/src/assets/main.css
@@ -30,10 +30,6 @@ nav ul {
   padding: 0;  
 }
 
-li { 
-  padding: 5px;
-}
-
 nav ul li {
   display: inline;
   margin-right: 10px;
@@ -60,17 +56,12 @@ input:focus {
   padding: 20px; 
 }
 
-.container {
-  border: 1px solid #1c87fa;
-  border-radius: 20px;
-}
-
 .sorting-menu {
   margin-top: 30px;
 }
 
 button {
-  background-color: #1c87fa;
+  background-color: #0056b3;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -83,7 +74,7 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #1c87fa;
 }
 
 footer {
@@ -92,6 +83,22 @@ footer {
   padding: 10px;
   width: 100%;
   text-align: center;
+}
+
+.link {
+  width: 30px;
+  height: 30px; 
+  background-color: #0056b3;
+  border-radius: 50%;
+  padding: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.link:hover {
+  background-color: #1c87fa;
+  transform: scale(1.2);
 }
 
 .search {
